# Hydrogen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Hydrogen/: CMakeLists.txt
Hydrogen/assets/: fragment.glsl  light_fragment.glsl  light_vertex.glsl  model_loading.frag  model_loading.vert  vertex.glsl
Hydrogen/assets/shaders/: base.brdf.frag  base.brdf.vert  base.convolution.frag  base.equirectangular.frag  base.equirectangular.vert  base.pbr.frag  base.pbr.vert  base.phong.frag  base.phong.vert  base.prefilter.frag  base.skybox.frag  base.skybox.vert  uniform_test.vert  uniform_test_blue.frag
Hydrogen/assets/shaders/base/: base.brdf.frag  base.brdf.vert  base.convolution.frag  base.equirectangular.frag  base.prefilter.frag  base.skybox.frag  base.skybox_operations.vert
Hydrogen/include/Hydrogen/: hydrogen.h
Hydrogen/src/: application.cpp  application.h  buffers.cpp  buffers.h  core.h  events.h  input.cpp  input.h  material.cpp  material.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_compiler.cpp  shader_compiler.h  test.cpp  test.h  vertex_array.h  window.cpp  window.h
Hydrogen/src/core/: application.cpp  application.h  camera.cpp  camera.h  layer.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h  window.cpp  window.h
Hydrogen/src/input/: events.h  input.cpp  input.h  keycodes.h
Hydrogen/src/material/: material.h  pbr_material.cpp  pbr_material.h  pbr_shader_compiler.cpp  pbr_shader_compiler.h  phong_material.cpp  phong_material.h  phong_shader_compiler.cpp  phong_shader_compiler.h  shader_compiler.h
Hydrogen/src/models/: mesh.cpp  mesh.h  model.cpp  model.h
Hydrogen/src/renderer/: buffers.cpp  buffers.h  camera.cpp  camera.h  cubemap.cpp  cubemap.h  framebuffer.cpp  framebuffer.h  orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h  renderbuffer.cpp  renderbuffer.h  renderer.cpp  renderer.h  renderer2d.cpp  renderer2d.h  renderer3d.cpp  renderer3d.h  renderer_api.cpp  renderer_api.h  shader.cpp  shader.h  skybox.cpp  skybox.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
Hydrogen/src/systems/: shader_compiler.cpp  shader_compiler.h  shader_system.cpp  shader_system.h  texture_system.cpp  texture_system.h
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
